fix: closed menu visible from the side

--- a/assets/scss/menubar.sass
+++ b/assets/scss/menubar.sass
@@ -44,6 +44,7 @@
         left: 0
         top: 100px
         height: 0
+        overflow: hidden
 
     .menu-overlay
         background-color: #F37626
